[변상연] 럭키카드 클래스 구현 (#34)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 *.xcuserstate
+LuckyCardGame/LuckyCardGame/.DS_Store
+LuckyCardGame/.DS_Store
+LuckyCardGame/LuckyCardGame.xcodeproj/project.xcworkspace/xcuserdata/sangyeon.xcuserdatad/UserInterfaceState.xcuserstate
