[변상연] 게임로직 테스트코드 작성, 게임로직 구현 (#64)
* feat: Player의 cards 프로퍼티의 접근제어자를 private(set)으로 수정

* feat: 카드 분배 테스트 코드 작성

* docs: .gitignore에 *.xcbkptlist 추가

* feat: CardBoardView가 segmentedControl과 플레이어들의 boardView까지 포함하도록 구현

* refactor: RoundView 삭제 후 PersonalCardBoardView에 radius 코드 작성

* feat: PlayerCardBoardView와 RemainCardBoardView를 갖는 GameBoardView 구현

* feat: segmentedControl과 GameBoardView를 갖는 LuckyGameView 구현

* refactor: LuckyGameView를 이용하여 CardBoardViewController 리팩토링

* feat: LuckyGameViewDelegate를 채택하여 segment index 변화 시 화면을 업데이트

* style: 줄바꿈 수정

* refactor: 주석 추가

* refactor: LuckyCardGame 객체를 LuckyGame으로 rename

* refactor: splitCard() 테스트 코드 리팩토링

* style: 띄어쓰기, 줄바꿈 등 리팩토링

* refactor: LuckyGameView의 configureUI()에서 configureFrame() 제거

슈퍼뷰의 frame이 zero인 상태에서 프레임 잡는 것 의미없기 때문

* refactor: GameBoardView의 configureUI()에서 configureFrame() 제거

* feat: CardBoardViewController에 final 키워드 추가

* refactor: 반복문 이용해서 splitCard() 테스트코드 리팩토링

* feat: LuckyCard 비교와 정렬을 위해 Equatable과 Comparable 프로토콜 채택

* test: 플레이어/나머지 카드의 숫자 오름차순 정렬 테스트코드 작성

* feat: LuckyCardManagerProtocol 구현

* feat: LuckyCardManager에서 LuckyCardManagerProtocol 채택

* feat: LuckyGame 초기화 시 cardManager의 타입을 LuckyCardManagerProtocol로 변경

* feat: LuckyCard.Shape의 연관값 정의

* feat: StringLiteral을 이용한 LuckyCard 초기화 메소드를 구현

"🐶01"로 초기화 가능해짐

* test: MockLuckyCardManager 구현

init 시 splitedCard 지정

* test: setUp() tearDown() 메소드 삭제

* test: given when then 주석 추가

* test: 카드 숫자 오름차순 정렬 테스트코드 구현

* test: 참가자 중 같은 숫자 카드 3장을 갖는지 판단하는 기능의 테스트 코드 구현

* test: 참가자들의 최대/최소 카드와 남은 카드 중 3개를 선택했을때 같은지 판단해주는 기능의 테스트 코드 구현

* refactor: LuckyGame.GameType의 cardCountPerPlayer, remainCardCount 수정

* refactor: LuckyGame init 시 파라미터 players 제거, init 내부에서 인스턴스 생성

* test: setUp(), tearDown() 메소드를 작성하고 그에 따라 테스트 코드 수정

* feat: LuckyCard 모양과 숫자의 접근제어자를 private -> internal로 변경

* feat: Player에 sortCards() 구현

* feat: LuckyGame에 플레이어 카드, 나머지 카드를 정렬해주는 메소드 

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 LuckyCardGame/LuckyCardGame/.DS_Store
 LuckyCardGame/.DS_Store
 LuckyCardGame/LuckyCardGame.xcodeproj/project.xcworkspace/xcuserdata/sangyeon.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcbkptlist
